src/test/deca/context/invalid/tests/FIELD-unknown_type.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 12: initialisation d'un attribut à une vleure de type incompatible.
// 
// Historique:
//    cree le 01/01/2022


class Test {
    pangolin field;

}